public class User {
    private String username;
    private String password;
    private String name;
    private int age;
    private String email;

    public User(String username, String password, String name, int age, String email) {
        this.username = username;
        this.password = password;
        this.name = name;
        this.age = age;
        this.email = email;
    }
}