import java.util.ArrayList;
import java.util.List;
import java.util.HashMap;

public class Wishlist {
    User user;
    TextUI textUI;


    public void editWishlist(User user) {
        // måske HashMap<String, ArrayList<String>> wishlists = user.getWishlists();
        //gerne komme ud som punktform i terminal
    }


    public void addWish(User user) {
       /* if(!user.wishlist.contains(wish.getnameOfItem())){
            user.wishlist.add(wish.getnameOfItem());
            textUI.displayMsg(wish.getnameOfItem() + " has been added to your list.\n");

        }else{
            textUI.displayMsg(wish.getnameOfItem() + " is already in your list.\n");

    }*/
    }

    public void removeWish(User user) {
        /*if(user.wishlist.contains(wish.getnameOfItem())){
            user.wishlist.remove(wish.getnameOfItem());
            textUI.displayMsg(wish.getnameOfItem() + " has been removed from your wishlist list.\n");

        }else{
            textUI.displayMsg(wish.getnameOfItem() + " is not on your list.\n");
        }*/

    }

    public void editOrder(User user) {

    }
}
