@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Wishlistplatform {
- User user
- TextUI TextUI
+ void startmenu()
+ void login()
+ void registerUser()
+ void homemenu()
+ void createWishlist()
+ void seeWishlist()
+ void inspiration()
+ void seeOtherWishlists()
}
class User{
-String userName
-String password
}
class Wishlist{
- User user
- TextUI textUI
+ void editWishlist(User user)
+ void addWish(User user)
+ void removeWish(User user)
+ void editOrder(User user)
+ void reserve(User user)
}
class Wish{
- String nameOfItem
- String description
- float price
- String category
- String URL
}
class TextUI{
-Scanner scanner
+ void displayMsg(String s)
+ int promptNumeric(String msg)
+ String promptText(String msg)
+ int promptChoice(String msg, ArrayList<String> list)
+ boolean promptBinary(String msg )
}
class Database{
}

Wishlistplatform *-- User
Wishlistplatform *-- TextUI
User *-- Wishlist
Wishlist *-- Wish




}

@enduml